added a microphone icon for now

--- a/EchoQuizzer/public/index.html
+++ b/EchoQuizzer/public/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Simple Quiz</h1>
         <h3 id="question"></h3>
         <div id="answerButtons"></div>
         <div class="next"><button id="next">Next</button></div>
+        <div class="microphone"><img src="../images/microphone.png" id="microphone" alt="Microphone" />
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
