--- a/EchoQuizzer/public/index.html
+++ b/EchoQuizzer/public/index.html
@@ -15,12 +15,15 @@
         <h3 id="question"></h3>
         <div id="answerButtons"></div>
         <div class="next"><button id="next">Next</button></div>
+        <button id="runPythonScript">Run Python Script</button>
+
 
         <main>
             <button class="mic-toggle" id="mic">
                 <span class="material-icons">mic</span>
             </button>
             <audio class="playback" controls></audio>
+
         </main>
     </div>
     <script src="script.js"></script>
